--- a/app/src/main/res/layout/item_nested_rooms_details.xml
+++ b/app/src/main/res/layout/item_nested_rooms_details.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:strokeColor="#E6ECF5"
+    app:strokeWidth="0dp"
     android:layout_marginBottom="30dp"
     android:background="@color/primaryBackground"
     android:backgroundTint="@color/primaryBackground"
@@ -11,8 +12,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         >
+
+
 
         <LinearLayout
             android:id="@+id/linear_1"
@@ -23,62 +25,21 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             >
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/ClickableTextInputLayoutStyle"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                app:placeholderText="Premium"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                app:endIconDrawable="@drawable/svg_arrow_down"
-                android:layout_weight="1"
-                android:hint="Room Type">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Room1"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:textSize="@dimen/H4"
+                android:textColor="@color/black"
+                android:fontFamily="@font/roboto_medium"
+                />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/roboto"
-                    android:editable="true"
-                    android:focusable="true"
-                    android:clickable="true"
-                    android:inputType="none"
-                    android:textColor="@color/secondary"
-                    android:textColorHint="@drawable/hint_selector"
-                    android:textSize="@dimen/H5" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/ClickableTextInputLayoutStyle"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                app:placeholderText="Premium"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="20dp"
-                app:endIconDrawable="@drawable/svg_arrow_down"
-                android:layout_weight="1"
-                android:hint="Rate Plan">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/roboto"
-                    android:editable="true"
-                    android:focusable="true"
-                    android:clickable="true"
-                    android:inputType="none"
-                    android:textColor="@color/secondary"
-                    android:textColorHint="@drawable/hint_selector"
-                    android:textSize="@dimen/H5" />
-
-            </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -160,7 +121,96 @@
                     android:paddingHorizontal="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Base Adults"
+                    android:text="Adults"
+                    android:textAlignment="center"
+                    android:layout_marginTop="-5dp"
+                    android:textSize="@dimen/H6"
+                    android:background="@color/primaryBackground"
+                    android:textColor="@color/subtitle"
+                    android:fontFamily="@font/roboto"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="17dp"
+                android:layout_weight="1"
+                android:layout_height="60dp">
+
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:strokeWidth="1dp"
+                    app:cardBackgroundColor="@color/white"
+                    >
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginVertical="5dp"
+                        app:layout_constraintEnd_toEndOf="@id/registrationNumberLayout"
+                        app:layout_constraintBottom_toBottomOf="@id/rate"
+                        app:layout_constraintTop_toTopOf="@id/rate">
+
+
+                        <ImageView
+                            android:id="@+id/removeBaseAdult1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/svg_remove"
+                            android:layout_marginStart="15dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"/>
+
+
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:textAlignment="center"
+                            android:textSize="16sp"
+                            app:layout_constraintStart_toEndOf="@+id/removeBaseAdult1"
+                            app:layout_constraintEnd_toStartOf="@+id/addBaseAdult1"
+                            android:textColor="@color/black"
+                            android:fontFamily="@font/roboto"/>
+
+
+                        <ImageView
+                            android:id="@+id/addBaseAdult1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/svg_add"
+                            android:layout_marginEnd="15dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <TextView
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:paddingHorizontal="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Childs"
                     android:textAlignment="center"
                     android:layout_marginTop="-5dp"
                     android:textSize="@dimen/H6"
@@ -172,15 +222,6 @@
 
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/nestedroomDetails_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/linear_1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="20dp"
-            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
