--- a/app/src/main/res/layout/dialog_layout_quickreservation.xml
+++ b/app/src/main/res/layout/dialog_layout_quickreservation.xml
@@ -6,7 +6,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginEnd="-9dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="9dp"
@@ -221,12 +221,14 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/room_detail_recycler"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 app:layout_constraintTop_toBottomOf="@id/room_detail_heading"
                 android:layout_marginTop="30dp"
                 android:layout_marginHorizontal="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="20dp"
                 />
 
 
