--- a/app/src/main/res/layout/activity_second_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_second_onboarding_screen.xml
@@ -320,41 +320,18 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/pincode_layout"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        style="@style/TextInputLayoutStyle"
-                        android:hint="PinCode"
-                        android:layout_marginTop="10dp"
-                        app:layout_constraintEnd_toStartOf="@id/city_layout"
-                        app:layout_constraintStart_toStartOf="@id/address_layout"
-                        app:layout_constraintTop_toBottomOf="@+id/address_layout">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/pincode_text"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/roboto"
-                            android:inputType="number"
-                            android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/city_layout"
+                        android:id="@+id/country_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/ClickableTextInputLayoutStyle"
-                        android:hint="City"
-                        android:layout_marginStart="10dp"
+                        android:hint="Country"
                         android:layout_marginTop="10dp"
-                        app:layout_constraintEnd_toEndOf="@id/address_layout"
-                        app:layout_constraintStart_toEndOf="@id/pincode_layout"
-                        app:layout_constraintTop_toBottomOf="@+id/address_layout">
+                        app:layout_constraintEnd_toStartOf="@id/state_layout"
+                        app:layout_constraintTop_toBottomOf="@id/address_layout"
+                        app:layout_constraintStart_toStartOf="@id/address_layout">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/city_text"
+                            android:id="@+id/country_text"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
@@ -373,10 +350,11 @@
                         android:layout_height="wrap_content"
                         style="@style/ClickableTextInputLayoutStyle"
                         android:hint="State"
-                        android:layout_marginTop="10dp"
-                        app:layout_constraintEnd_toStartOf="@id/currency_layout"
-                        app:layout_constraintStart_toStartOf="@id/pincode_layout"
-                        app:layout_constraintTop_toBottomOf="@id/pincode_layout">
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintTop_toTopOf="@id/country_layout"
+                        app:layout_constraintEnd_toEndOf="@id/address_layout"
+                        app:layout_constraintBottom_toBottomOf="@id/country_layout"
+                        app:layout_constraintStart_toEndOf="@id/country_layout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/state_text"
@@ -393,21 +371,18 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/currency_layout"
+                        android:id="@+id/city_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/ClickableTextInputLayoutStyle"
-                        android:hint="Basic Currency"
-                        android:layout_marginStart="10dp"
+                        android:hint="City"
                         android:layout_marginTop="10dp"
-                        app:layout_constraintVertical_bias="0.0"
-                        app:layout_constraintBottom_toTopOf="@id/card_SingleNext"
-                        app:layout_constraintEnd_toEndOf="@id/city_layout"
-                        app:layout_constraintStart_toEndOf="@id/state_layout"
-                        app:layout_constraintTop_toBottomOf="@+id/city_layout">
+                        app:layout_constraintEnd_toStartOf="@id/pincode_layout"
+                        app:layout_constraintTop_toBottomOf="@id/country_layout"
+                        app:layout_constraintStart_toStartOf="@id/address_layout">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/currency_text"
+                            android:id="@+id/city_text"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
@@ -417,6 +392,28 @@
                             android:editable="false"
                             android:clickable="true"
                             android:focusable="false"/>
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/pincode_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="PinCode"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@id/city_layout"
+                        app:layout_constraintEnd_toEndOf="@id/address_layout"
+                        app:layout_constraintTop_toTopOf="@id/city_layout">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/pincode_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/roboto"
+                            android:inputType="number"
+                            android:textColorHint="@color/secondary"
+                            android:textColor="@color/secondary" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -431,7 +428,7 @@
                         app:cardBackgroundColor="@color/black"
                         android:layout_marginBottom="40dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@id/currency_layout">
+                        app:layout_constraintEnd_toEndOf="@id/pincode_layout">
 
                         <TextView
                             android:layout_width="wrap_content"
