--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -231,10 +231,7 @@
                             app:cardCornerRadius="10dp"
                             app:strokeWidth="0.5dp"
                             app:strokeColor="@color/lightBlack"
-                            app:cardBackgroundColor="@color/white"
-                            app:layout_constraintTop_toBottomOf="@id/pincode_layout"
-                            app:layout_constraintStart_toStartOf="@id/pincode_layout"
-                            app:layout_constraintEnd_toEndOf="@id/currency_layout">
+                            app:cardBackgroundColor="@color/white">
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:layout_width="match_parent"
@@ -343,10 +340,7 @@
                             app:cardCornerRadius="10dp"
                             app:strokeWidth="0.5dp"
                             app:strokeColor="@color/lightBlack"
-                            app:cardBackgroundColor="@color/white"
-                            app:layout_constraintTop_toBottomOf="@id/roomsInPL"
-                            app:layout_constraintStart_toStartOf="@id/pincode_layout"
-                            app:layout_constraintEnd_toEndOf="@id/currency_layout">
+                            app:cardBackgroundColor="@color/white">
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:layout_width="match_parent"
@@ -369,6 +363,7 @@
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
                                     android:layout_marginEnd="10dp"
+                                    android:gravity="center_vertical"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintTop_toTopOf="parent">
