--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -60,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.core.widget.NestedScrollView
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
@@ -138,8 +138,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/single_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/recyclerView">
@@ -210,6 +209,9 @@
                                     android:id="@+id/ratingBar"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    style="?android:attr/ratingBarStyleIndicator"
+                                    android:isIndicator="false"
+                                    android:numStars="7"
                                     android:progressTint="@color/yellow"
                                     android:layout_marginEnd="10dp"
                                     app:layout_constraintTop_toTopOf="parent"
@@ -433,33 +435,36 @@
 
                     </LinearLayout>
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/card_SingleNext"
-                        android:layout_width="170dp"
-                        android:layout_height="@dimen/button_height"
-                        style="@style/ButtonCardView"
-                        android:layout_marginBottom="40dp"
-                        android:transitionName="Btn"
-                        app:cardBackgroundColor="@color/black"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@id/ll5">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/next"
-                            android:textColor="@color/white"
-                            android:fontFamily="@font/roboto_bold"
-                            android:layout_gravity="center"
-                            android:textSize="@dimen/H5" />
-
-                    </androidx.cardview.widget.CardView>
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_SingleNext"
+                    android:layout_width="170dp"
+                    android:layout_height="@dimen/button_height"
+                    style="@style/ButtonCardView"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginEnd="60dp"
+                    android:transitionName="Btn"
+                    app:cardBackgroundColor="@color/black"
+                    app:layout_constraintVertical_bias="1"
+                    app:layout_constraintTop_toBottomOf="@id/single_layout"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/single_layout">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/next"
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/roboto_bold"
+                        android:layout_gravity="center"
+                        android:textSize="@dimen/H5" />
+
+                </androidx.cardview.widget.CardView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.core.widget.NestedScrollView>
+        </ScrollView>
 
     </androidx.cardview.widget.CardView>
 
