--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -541,7 +541,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
@@ -858,7 +858,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
@@ -1108,6 +1108,173 @@
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                         </com.google.android.material.card.MaterialCardView>
+                        <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/guests_card"
+                            android:layout_width="match_parent"
+                            android:layout_marginEnd="50dp"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:cardCornerRadius="10dp"
+                            app:strokeColor="@color/primaryBackground"
+                            app:cardBackgroundColor="@color/white">
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginBottom="9dp"
+                                android:layout_marginTop="9dp">
+                                <ImageView
+                                    android:id="@+id/img_guests"
+                                    android:layout_width="35dp"
+                                    android:layout_height="35dp"
+                                    app:layout_constraintVertical_bias="0"
+                                    android:src="@drawable/svg_others_"
+                                    android:layout_marginStart="9dp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:tint="@color/lightBlack"/>
+                                <TextView
+                                    android:id="@+id/guests_txt"
+                                    android:layout_width="wrap_content"
+                                    app:layout_constraintVertical_bias="0"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="6dp"
+                                    android:text="Guests &amp; Reservations"
+                                    app:layout_constraintStart_toEndOf="@id/img_guests"
+                                    app:layout_constraintTop_toTopOf="@id/img_guests"
+                                    app:layout_constraintBottom_toBottomOf="@id/img_guests"
+                                    android:fontFamily="@font/roboto_medium"
+                                    android:textColor="@color/black"
+                                    android:layout_marginStart="10dp"
+                                    android:textSize="@dimen/H4" />
+                                <ImageView
+                                    android:id="@+id/guests_drop_down"
+                                    android:layout_width="25dp"
+                                    android:layout_height="30dp"
+                                    android:src="@drawable/svg_arrow_down"
+                                    app:layout_constraintVertical_bias="0"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    android:layout_marginEnd="19dp"
+                                    app:layout_constraintTop_toTopOf="@id/guests_txt"
+                                    app:layout_constraintBottom_toBottomOf="@id/guests_txt"
+                                    app:tint="@color/black"/>
+                                <LinearLayout
+                                    android:id="@+id/guests_layout"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:visibility="gone"
+                                    app:layout_constraintTop_toBottomOf="@id/img_guests">
+                                <LinearLayout
+                                    android:id="@+id/guestDataBaseCard"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    android:background="@color/black"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="12dp"
+                                    android:paddingStart="20dp"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical">
+                                    <ImageView
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        android:src="@drawable/svg_chart"
+                                        app:tint="@color/white"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Guest Database"
+                                        android:fontFamily="@font/roboto_medium"
+                                        android:textColor="@color/white"
+                                        android:layout_marginStart="10dp"
+                                        android:textSize="@dimen/H4" />
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:id="@+id/guestReservation_ll"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/black"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="12dp"
+                                    android:paddingStart="20dp"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical">
+                                    <ImageView
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        android:src="@drawable/svg_chart"
+                                        app:tint="@color/white"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Reservation Type"
+                                        android:fontFamily="@font/roboto_medium"
+                                        android:textColor="@color/white"
+                                        android:layout_marginStart="10dp"
+                                        android:textSize="@dimen/H4" />
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/black"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="12dp"
+                                    app:layout_constraintTop_toBottomOf="@id/ll2"
+                                    android:paddingStart="20dp"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical">
+                                    <ImageView
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        android:src="@drawable/svg_chart"
+                                        app:tint="@color/white"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Identity Documents"
+                                        android:fontFamily="@font/roboto_medium"
+                                        android:textColor="@color/white"
+                                        android:layout_marginStart="10dp"
+                                        android:textSize="@dimen/H4" />
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/black"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_marginTop="12dp"
+                                    app:layout_constraintTop_toBottomOf="@id/ll3"
+                                    android:paddingStart="20dp"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical">
+                                    <ImageView
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        android:src="@drawable/svg_chart"
+                                        app:tint="@color/white"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Guest Types"
+                                        android:fontFamily="@font/roboto_medium"
+                                        android:textColor="@color/white"
+                                        android:layout_marginStart="10dp"
+                                        android:textSize="@dimen/H4" />
+                                </LinearLayout>
+
+
+
+                                </LinearLayout>
+
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        </com.google.android.material.card.MaterialCardView>
+
+
+
+
                         <com.google.android.material.card.MaterialCardView
                             android:id="@+id/others_card"
                             android:layout_width="match_parent"
